--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "vue-i18n": "^8.14.1",
     "vue-router": "^3.1.5",
     "vue-splitpane": "^1.0.4",
+    "vue-viacep": "^1.0.3",
     "vuedraggable": "^2.23.0",
     "vuex": "3.1.1",
     "xlsx": "^0.15.5"
