--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "tui-editor": "^1.4.6",
     "vue": "2.6.10",
     "vue-count-to": "^1.0.13",
+    "vue-form-wizard": "^0.8.4",
     "vue-i18n": "^8.14.1",
     "vue-router": "^3.1.5",
     "vue-splitpane": "^1.0.4",
