--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "js-cookie": "^2.2.1",
     "jsonlint": "^1.6.3",
     "jszip": "^3.2.2",
+    "moment": "^2.24.0",
     "node-sass": "^4.13.1",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
@@ -73,9 +74,12 @@
     "screenfull": "^4.2.1",
     "sortablejs": "^1.10.2",
     "tui-editor": "^1.4.6",
+    "vee-validate": "^3.3.0",
     "vue": "2.6.10",
     "vue-count-to": "^1.0.13",
+    "vue-ctk-date-time-picker": "^2.4.0",
     "vue-form-wizard": "^0.8.4",
+    "vue-full-calendar": "^2.7.0",
     "vue-i18n": "^8.14.1",
     "vue-router": "^3.1.5",
     "vue-splitpane": "^1.0.4",
