--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "screenfull": "^4.2.1",
     "sortablejs": "^1.10.2",
     "tui-editor": "^1.4.6",
+    "v-money": "^0.8.1",
     "vee-validate": "^3.3.0",
     "vue": "2.6.10",
     "vue-count-to": "^1.0.13",
