NPM Dependecies Updated

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "chouchoute",
-  "version": "0.1.1",
-  "description": "A beautiful dashboard for Laravel built by VueJS",
-  "author": "Tuan Duong <bacduong@gmail.com>",
+  "version": "0.2.0",
+  "description": "La Chouchoute Compagnie's Management System",
+  "author": "Dan Kenji Hwang <whozthiz@gmail.com>",
   "license": "MIT",
   "private": true,
   "scripts": {
@@ -36,42 +36,39 @@
     "babel-plugin-transform-vue-jsx": "^3.7.0",
     "compression-webpack-plugin": "^5.0.2",
     "cross-env": "^7.0.3",
-    "eslint": "^7.18.0",
-    "eslint-loader": "^4.0.2",
-    "eslint-plugin-vue": "^7.5.0",
-    "eslint-webpack-plugin": "^2.4.3",
-    "husky": "^4.3.8",
-    "laravel-mix": "^4.1.4",
+    "eslint": "^5.16.0",
+    "eslint-loader": "^2.2.1",
+    "eslint-plugin-vue": "^5.2.3",
+    "husky": "^3.0.5",
+    "laravel-mix": "^5.0.9",
     "laravel-mix-eslint": "^0.1.3",
-    "lint-staged": "^10.5.3",
+    "lint-staged": "^9.2.5",
     "resolve-url-loader": "^3.1.2",
-    "sass-loader": "^7.3.1",
+    "sass-loader": "^8.0.0",
     "script-loader": "^0.7.2",
-    "svg-sprite-loader": "^5.2.1",
+    "svg-sprite-loader": "^4.3.0",
     "vue-template-compiler": "^2.6.12",
-    "webpack": "^4.43.0",
+    "webpack": "^4.46.0",
     "webpack-bundle-analyzer": "^3.9.0",
+    "webpack-chunk-rename-plugin": "^1.0.3",
     "webpack-cli": "^3.3.12"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.34",
-    "@fortawesome/free-brands-svg-icons": "^5.15.2",
-    "@fortawesome/free-solid-svg-icons": "^5.15.2",
-    "@fortawesome/vue-fontawesome": "^2.0.2",
     "axios": "^0.21.1",
-    "camelcase": "^6.2.0",
+    "babel-loader": "^8.2.2",
     "clipboard": "^2.0.6",
     "core-js": "^3.8.3",
+    "css-loader": "^3.6.0",
     "driver.js": "^0.9.7",
     "dropzone": "^5.7.2",
     "echarts": "^4.9.0",
     "element-ui": "^2.15.0",
+    "file-loader": "^6.2.0",
     "file-saver": "^2.0.5",
     "fuse.js": "^6.4.6",
     "js-cookie": "^2.2.1",
     "jsonlint": "^1.6.3",
     "jszip": "^3.5.0",
-    "moment": "^2.29.1",
     "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
@@ -79,22 +76,18 @@
     "screenfull": "^5.1.0",
     "sortablejs": "^1.13.0",
     "tui-editor": "^1.4.6",
-    "v-money": "^0.8.1",
-    "vee-validate": "^3.4.5",
     "vue": "^2.6.12",
     "vue-count-to": "^1.0.13",
-    "vue-ctk-date-time-picker": "^2.5.0",
-    "vue-currency-input": "^1.22.4",
-    "vue-form-wizard": "^0.8.4",
-    "vue-full-calendar": "^2.8.1-0",
     "vue-i18n": "^8.22.4",
-    "vue-router": "^3.4.9",
+    "vue-loader": "^15.9.6",
+    "vue-router": "^3.5.1",
     "vue-splitpane": "^1.0.4",
-    "vue-the-mask": "^0.11.1",
-    "vue-viacep": "^1.0.4",
     "vuedraggable": "^2.24.3",
-    "vuex": "^3.6.0",
-    "webpack-chunk-rename-plugin": "^1.0.3",
+    "vuex": "^3.6.1",
     "xlsx": "^0.16.9"
-  }
+  },
+  "browserslist": [
+    "last 2 version",
+    "> 1%"
+  ]
 }
