Added v-money vue-the-mask vue-currency modules

--- a/package.json
+++ b/package.json
@@ -76,12 +76,15 @@
     "screenfull": "^5.1.0",
     "sortablejs": "^1.13.0",
     "tui-editor": "^1.4.6",
+    "v-money": "^0.8.1",
     "vue": "^2.6.12",
     "vue-count-to": "^1.0.13",
+    "vue-currency-input": "^1.22.6",
     "vue-i18n": "^8.22.4",
     "vue-loader": "^15.9.6",
     "vue-router": "^3.5.1",
     "vue-splitpane": "^1.0.4",
+    "vue-the-mask": "^0.11.1",
     "vuedraggable": "^2.24.3",
     "vuex": "^3.6.2",
     "xlsx": "^0.16.9"
