--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "vue-router": "^3.5.1",
     "vue-splitpane": "^1.0.4",
     "vue-the-mask": "^0.11.1",
+    "vue-viacep": "^1.0.4",
     "vuedraggable": "^2.24.3",
     "vuex": "^3.6.2",
     "xlsx": "^0.16.9"
